Update NotificationRepository.java
Synchronized  Repository Defensive Approach