@@ -1,6 +1,7 @@
 package api.repository;
 import api.model.Notification;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
@@ -8,31 +9,31 @@ public class NotificationRepository implements Repository<Notification> {
     private final List<Notification> notificationList;
 
     public NotificationRepository(List<Notification> notificationList) {
-        this.notificationList = notificationList;
+        this.notificationList = new ArrayList<>(notificationList); // create new list for defensive copying
     }
 
     @Override
-    public void add(Notification notification){
+    public synchronized void add(Notification notification){
         notificationList.add(notification);
     }
 
     @Override
-    public void remove(Notification notification){
+    public synchronized void remove(Notification notification){
         notificationList.remove(notification);
     }
 
     @Override
-    public void addAll(List<Notification> notification) {
+    public synchronized void addAll(List<Notification> notification) {
         notificationList.addAll(notification);
     }
 
     @Override
-    public List<Notification> getAll() {
-        return Collections.unmodifiableList(notificationList);
+    public synchronized List<Notification> getAll() {
+        return List.copyOf(notificationList);
     }
 
     @Override
-    public void clear(){
+    public synchronized void clear(){
         notificationList.clear();
     }
 
